--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <groupId>com.fitness</groupId>
     <artifactId>fitness-server-manager</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -25,6 +26,10 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
+
+    <modules>
+        <module>fitness-eureka</module>
+    </modules>
 
     <dependencyManagement>
         <dependencies>
